src/octoParser/parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(body) { return { type: "Program", body: body, location: location() }; },
        peg$c1 = peg$otherExpectation("declaraction"),
        peg$c2 = function(op, one, two) { return { type: "Declaration", op: op, one: one, two: two, location: location() }; },
        peg$c3 = function(op, one, two) { return {type: "Declaration", op: op, one: one, two: two, location: location() }; },
        peg$c4 = ":",
        peg$c5 = peg$literalExpectation(":", false),
        peg$c6 = peg$otherExpectation("if statement"),
        peg$c7 = function(test, consequent, alternate) { return { type: "IfStatement", test: test, consequent: consequent, alternate: alternate, location: location() }; },
        peg$c8 = function(test, consequent) { return { type: "IfStatement", test: test, consequent: consequent, location: location() }; },
        peg$c9 = peg$otherExpectation("loop statement"),
        peg$c10 = function(body) { return { type: "LoopStatement", body: body, location: location() }; },
        peg$c11 = peg$otherExpectation("while statement"),
        peg$c12 = function(test) { return { type: "WhileStatement", test: test, location: location() }; },
        peg$c13 = peg$otherExpectation("test expression"),
        peg$c14 = function(one, op, two) { return { type: "TestExpression", one: one, op: op, two: two, location: location() }; },
        peg$c15 = "-",
        peg$c16 = peg$literalExpectation("-", false),
        peg$c17 = function(one, op) { return { type: "TestExpression", one: one, op: op, location: location() }; },
        peg$c18 = peg$otherExpectation("comparison operator"),
        peg$c19 = "==",
        peg$c20 = peg$literalExpectation("==", false),
        peg$c21 = "!=",
        peg$c22 = peg$literalExpectation("!=", false),
        peg$c23 = "<=",
        peg$c24 = peg$literalExpectation("<=", false),
        peg$c25 = ">=",
        peg$c26 = peg$literalExpectation(">=", false),
        peg$c27 = "<",
        peg$c28 = peg$literalExpectation("<", false),
        peg$c29 = ">",
        peg$c30 = peg$literalExpectation(">", false),
        peg$c31 = peg$otherExpectation("assignment expression"),
        peg$c32 = ">>=",
        peg$c33 = peg$literalExpectation(">>=", false),
        peg$c34 = "<<=",
        peg$c35 = peg$literalExpectation("<<=", false),
        peg$c36 = "|=",
        peg$c37 = peg$literalExpectation("|=", false),
        peg$c38 = "&=",
        peg$c39 = peg$literalExpectation("&=", false),
        peg$c40 = "^=",
        peg$c41 = peg$literalExpectation("^=", false),
        peg$c42 = "-=",
        peg$c43 = peg$literalExpectation("-=", false),
        peg$c44 = "=-",
        peg$c45 = peg$literalExpectation("=-", false),
        peg$c46 = function(one, op, two) { return { type: "AssignmentExpression", op: op, one: one, two: two, location: location() }; },
        peg$c47 = "+=",
        peg$c48 = peg$literalExpectation("+=", false),
        peg$c49 = ":=",
        peg$c50 = peg$literalExpectation(":=", false),
        peg$c51 = function(op, one) { return { type: "RandomExpression", op: op, one: one, location: location(), }; },
        peg$c52 = function(op, one) { return { type: "AddressExpression", op: op, one: one, location: location() }; },
        peg$c53 = function(op) { return { type: "KeywordExpression",op: op, location: location(),  }; },
        peg$c54 = function(op, one) { return { type: "Unaryexpression", op: op, one: one, location: location(), }; },
        peg$c55 = peg$otherExpectation("directive"),
        peg$c56 = function(op, one, two) { return {type: "Directive", op: op, one: one, two: two, location: location() }; },
        peg$c57 = function(op, one, two, three) { return {type: "Directive", op: op, one: one, two: two, three: three, location: location() }; },
        peg$c58 = peg$otherExpectation("number"),
        peg$c59 = function(number) { return { type: "Number", value: number, location: location() }; },
        peg$c60 = "0b",
        peg$c61 = peg$literalExpectation("0b", false),
        peg$c62 = "0x",
        peg$c63 = peg$literalExpectation("0x", false),
        peg$c64 = /^[0-9]/,
        peg$c65 = peg$classExpectation([["0", "9"]], false, false),
        peg$c66 = function(value) { return value.join(''); },
        peg$c67 = peg$otherExpectation("vregister or alias"),
        peg$c68 = peg$otherExpectation("v regiser"),
        peg$c69 = "v",
        peg$c70 = peg$literalExpectation("v", false),
        peg$c71 = /^[0-9a-fA-F]/,
        peg$c72 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
        peg$c73 = function(register) { return { type: "vRegister", value: register.join('') }; },
        peg$c74 = peg$otherExpectation("i regiser"),
        peg$c75 = "i",
        peg$c76 = peg$literalExpectation("i", false),
        peg$c77 = function(register) { return { type: "iRegister", value: register }; },
        peg$c78 = peg$otherExpectation("label"),
        peg$c79 = /^[a-z0-9\-_?]/i,
        peg$c80 = peg$classExpectation([["a", "z"], ["0", "9"], "-", "_", "?"], false, true),
        peg$c81 = function(value) { return { type: "Label", value: value.join(''), location: location() }; },
        peg$c82 = "return",
        peg$c83 = peg$literalExpectation("return", false),
        peg$c84 = ";",
        peg$c85 = peg$literalExpectation(";", false),
        peg$c86 = "clear",
        peg$c87 = peg$literalExpectation("clear", false),
        peg$c88 = "bcd",
        peg$c89 = peg$literalExpectation("bcd", false),
        peg$c90 = "save",
        peg$c91 = peg$literalExpectation("save", false),
        peg$c92 = "load",
        peg$c93 = peg$literalExpectation("load", false),
        peg$c94 = "sprite",
        peg$c95 = peg$literalExpectation("sprite", false),
        peg$c96 = "jump",
        peg$c97 = peg$literalExpectation("jump", false),
        peg$c98 = "jump0",
        peg$c99 = peg$literalExpectation("jump0", false),
        peg$c100 = ":const",
        peg$c101 = peg$literalExpectation(":const", false),
        peg$c102 = ":alias",
        peg$c103 = peg$literalExpectation(":alias", false),
        peg$c104 = ":breakpoint",
        peg$c105 = peg$literalExpectation(":breakpoint", false),
        peg$c106 = ":unpack",
        peg$c107 = peg$literalExpectation(":unpack", false),
        peg$c108 = ":org",
        peg$c109 = peg$literalExpectation(":org", false),
        peg$c110 = ":next",
        peg$c111 = peg$literalExpectation(":next", false),
        peg$c112 = "hex",
        peg$c113 = peg$literalExpectation("hex", false),
        peg$c114 = "random",
        peg$c115 = peg$literalExpectation("random", false),
        peg$c116 = "key",
        peg$c117 = peg$literalExpectation("key", false),
        peg$c118 = "-key",
        peg$c119 = peg$literalExpectation("-key", false),
        peg$c120 = "delay",
        peg$c121 = peg$literalExpectation("delay", false),
        peg$c122 = function() { return { type: "delay", value: "delay", location: location() }; },
        peg$c123 = "buzzer",
        peg$c124 = peg$literalExpectation("buzzer", false),
        peg$c125 = function() { return { type: "buzzer", value: "buzzer", location: location() }; },
        peg$c126 = "if",
        peg$c127 = peg$literalExpectation("if", false),
        peg$c128 = "then",
        peg$c129 = peg$literalExpectation("then", false),
        peg$c130 = "else",
        peg$c131 = peg$literalExpectation("else", false),
        peg$c132 = "begin",
        peg$c133 = peg$literalExpectation("begin", false),
        peg$c134 = "end",
        peg$c135 = peg$literalExpectation("end", false),
        peg$c136 = "loop",
        peg$c137 = peg$literalExpectation("loop", false),
        peg$c138 = "again",
        peg$c139 = peg$literalExpectation("again", false),
        peg$c140 = "while",
        peg$c141 = peg$literalExpectation("while", false),
        peg$c142 = "hires",
        peg$c143 = peg$literalExpectation("hires", false),
        peg$c144 = "lores",
        peg$c145 = peg$literalExpectation("lores", false),
        peg$c146 = "scroll-down",
        peg$c147 = peg$literalExpectation("scroll-down", false),
        peg$c148 = "scroll-left",
        peg$c149 = peg$literalExpectation("scroll-left", false),
        peg$c150 = "scroll-right",
        peg$c151 = peg$literalExpectation("scroll-right", false),
        peg$c152 = "bighex",
        peg$c153 = peg$literalExpectation("bighex", false),
        peg$c154 = "exit",
        peg$c155 = peg$literalExpectation("exit", false),
        peg$c156 = "saveflags",
        peg$c157 = peg$literalExpectation("saveflags", false),
        peg$c158 = "loadflags",
        peg$c159 = peg$literalExpectation("loadflags", false),
        peg$c160 = "scroll-up",
        peg$c161 = peg$literalExpectation("scroll-up", false),
        peg$c162 = "plane",
        peg$c163 = peg$literalExpectation("plane", false),
        peg$c164 = "audio",
        peg$c165 = peg$literalExpectation("audio", false),
        peg$c166 = "long",
        peg$c167 = peg$literalExpectation("long", false),
        peg$c168 = peg$otherExpectation("trivia"),
        peg$c169 = function(trivia) { return { type: "Trivia", value: trivia.join('') }; },
        peg$c170 = peg$otherExpectation("comment"),
        peg$c171 = "#",
        peg$c172 = peg$literalExpectation("#", false),
        peg$c173 = /^[^\n]/,
        peg$c174 = peg$classExpectation(["\n"], true, false),
        peg$c175 = function(start, rest) { return start + rest.join(''); },
        peg$c176 = peg$otherExpectation("whitespace"),
        peg$c177 = /^[ \t\r\n]/,
        peg$c178 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
        peg$c179 = function(whitespace) { return whitespace.join(''); },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsestatement();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsestatement();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsestatement() {
      var s0;

      s0 = peg$parseloopStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseifStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseunaryExpression();
          if (s0 === peg$FAILED) {
            s0 = peg$parseassignmentExpression();
            if (s0 === peg$FAILED) {
              s0 = peg$parsedeclaration();
              if (s0 === peg$FAILED) {
                s0 = peg$parsedirective();
                if (s0 === peg$FAILED) {
                  s0 = peg$parselabel();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsekeywordExpression();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsenumber();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parse_();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsedeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseconstKeyword();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parselabel();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsenumber();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c2(s1, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsealiasKeyword();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parselabel();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parsealiasable();
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s1, s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 58) {
            s1 = peg$c4;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parselabel();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  s5 = [];
                  s6 = peg$parsestatement();
                  while (s6 !== peg$FAILED) {
                    s5.push(s6);
                    s6 = peg$parsestatement();
                  }
                  if (s5 !== peg$FAILED) {
                    s6 = [];
                    s7 = peg$parsereturnKeyword();
                    while (s7 !== peg$FAILED) {
                      s6.push(s7);
                      s7 = peg$parsereturnKeyword();
                    }
                    if (s6 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c2(s1, s3, s5);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parseifStatement() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
